--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "debug playbook to identify problematic requests with datadog",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "npx tsc"
   },
   "keywords": [],
@@ -19,7 +19,10 @@
   },
   "devDependencies": {
     "@types/figlet": "^1.5.8",
+    "@types/jest": "^29.5.12",
     "@types/node": "^22.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.5.4"
   }
 }
