--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@datadog/datadog-api-client": "^1.26.0",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "figlet": "^1.7.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/figlet": "^1.5.8",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.0.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
     "ts-jest": "^29.2.5",
     "typescript": "^5.5.4"
   }
